[gd_scene load_steps=17 format=4 uid="uid://deecbngh7pw64"]

[ext_resource type="Script" uid="uid://dgixme0nntagb" path="res://scenes/levels/level_1/level_1.gd" id="1_iup6o"]
[ext_resource type="Texture2D" uid="uid://didmsrgabaxfo" path="res://assets/backgrounds/n01l01.png" id="1_ugaie"]
[ext_resource type="Texture2D" uid="uid://d3gicdjiefg83" path="res://assets/backgrounds/n01l02.png" id="2_iup6o"]
[ext_resource type="PackedScene" uid="uid://dn4xmir805gjg" path="res://scenes/backgrounds/blue_cave/blue_cave.tscn" id="2_up0v7"]
[ext_resource type="Texture2D" uid="uid://b3qq4r3aytrqw" path="res://assets/backgrounds/n01l03.png" id="3_ses5c"]
[ext_resource type="PackedScene" uid="uid://cr0qvrewh7not" path="res://scenes/tilemaps/tilemap_blue.tscn" id="4_up0v7"]
[ext_resource type="PackedScene" uid="uid://bfwn07d8i2mqo" path="res://scenes/light/light.tscn" id="5_4xau6"]
[ext_resource type="PackedScene" uid="uid://kf3nir6ir55k" path="res://scenes/player/player.tscn" id="6_slc34"]
[ext_resource type="PackedScene" uid="uid://cegfpy7q3ebdd" path="res://scenes/UI/healthbar/healthbar.tscn" id="7_5owdk"]
[ext_resource type="PackedScene" uid="uid://bmpbi3c8015a" path="res://scenes/items/recovery.tscn" id="7_iup6o"]
[ext_resource type="PackedScene" uid="uid://un2s82v6oow7" path="res://scenes/translucid_items/vidrio.tscn" id="8_ytkhg"]
[ext_resource type="PackedScene" uid="uid://bebvcvfkiq8hs" path="res://scenes/totem/totem.tscn" id="9_odxlg"]
[ext_resource type="PackedScene" uid="uid://b6lae70ry3nef" path="res://scenes/UI/pause_menu/level_pause.tscn" id="10_issku"]
[ext_resource type="PackedScene" uid="uid://c1c86c41kpvcv" path="res://scenes/enemies/enemy 2/enemy 2.tscn" id="13_ses5c"]
[ext_resource type="Material" uid="uid://d1hcctp044drw" path="res://scenes/shaders/shockwave.tres" id="15_c2ybf"]
[ext_resource type="Material" uid="uid://c6f6sckuq2wdo" path="res://scenes/shaders/fog_material.tres" id="16_frtti"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_iup6o")
total_time = 10.0
metadata/_custom_type_script = "uid://dgixme0nntagb"

[node name="BlueCave" parent="." instance=ExtResource("2_up0v7")]
offset = Vector2(20, 100)
scale = Vector2(0.795, 0.795)
transform = Transform2D(0.795, 0, 0, 0.795, 20, 100)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(584.09, 325.615)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_ugaie")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
position = Vector2(579, 337.5)
scale = Vector2(0.601042, 0.623148)
texture = ExtResource("2_iup6o")

[node name="Sprite2D3" type="Sprite2D" parent="."]
visible = false
position = Vector2(581, 338)
scale = Vector2(0.602083, 0.62037)
texture = ExtResource("3_ses5c")

[node name="TileMapLayer" parent="." instance=ExtResource("4_up0v7")]
tile_map_data = PackedByteArray("AAAAAAAAAgAJAAIAAAAAAAEAAgAJAAIAAAAAAAIAAgAGAAIAAAAAAAMAAgALAAIAAAABAAAAAgAJAAIAAAACAAAAAgAJAAIAAAADAAAAAgAJAAIAAAAEAAAAAgAJAAIAAAAFAAAAAgAJAAIAAAAGAAAAAgAJAAIAAAAHAAAAAgAJAAIAAAAIAAAAAgAJAAIAAAAJAAAAAgAJAAIAAAAKAAAAAgAJAAIAAAALAAAAAgAJAAIAAAAMAAAAAgAJAAIAAAANAAAAAgAJAAIAAAAOAAAAAgAJAAIAAAAHAAEAAgAJAAIAAAAGAAEAAgAJAAIAAAAFAAEAAgAJAAIAAAAEAAEAAgAJAAIAAAADAAEAAgAJAAIAAAACAAEAAgAJAAIAAAABAAEAAgAJAAIAAAAIAAEAAgAJAAIAAAAJAAEAAgAJAAIAAAAKAAEAAgAJAAIAAAALAAEAAgAJAAIAAAAMAAEAAgAJAAIAAAANAAEAAgAJAAIAAAAOAAEAAgAJAAIAAAAAAAQAAgALAAIAAAAAAAUAAgALAAIAAAACAAYAAgACAAMAAAADAAYAAgACAAMAAAAEAAYAAgACAAMAAAAFAAYAAgACAAMAAAAGAAYAAgACAAMAAAAHAAYAAgADAAMAAAABAAYAAgACAAMAAAAAAAYAAgALAAEAAAABAAIAAgAJAAMAAAACAAIAAgAJAAMAAAADAAIAAgAJAAMAAAAEAAIAAgAJAAMAAAAFAAIAAgAJAAMAAAAGAAIAAgAJAAMAAAAHAAIAAgAJAAMAAAAIAAIAAgAJAAMAAAAJAAIAAgAJAAMAAAAKAAIAAgAJAAMAAAALAAIAAgAFAAIAAAAMAAIAAgAJAAIAAAANAAIAAgAJAAIAAAAMAAMAAgAJAAIAAAALAAMAAgAIAAEAAAALAAQAAgAIAAEAAAAMAAQAAgAJAAIAAAAOAAIAAgAJAAIAAAANAAMAAgAJAAIAAAANAAQAAgAJAAIAAAAOAAMAAgAJAAIAAAAOAAQAAgAJAAIAAAALAAUAAgAIAAEAAAALAAYAAgAIAAEAAAALAAcAAgAIAAEAAAALAAgAAgAIAAEAAAAMAAUAAgAJAAIAAAAMAAYAAgAJAAIAAAAMAAcAAgAJAAIAAAAMAAgAAgAJAAIAAAANAAYAAgAJAAIAAAANAAUAAgAJAAIAAAAOAAUAAgAJAAIAAAAOAAYAAgAJAAIAAAAOAAcAAgAJAAIAAAANAAcAAgAJAAIAAAANAAgAAgAJAAIAAAAOAAgAAgAJAAIAAAAAAAcAAgALAAIAAAAAAAgAAgALAAIAAAAAAAkAAgALAAIAAAAAAAoAAgALAAIAAAAAAAsAAgALAAIAAAAAAAwAAgALAAIAAAAAAA0AAgALAAIAAAAAAA4AAgAGAAEAAAAAAA8AAgAJAAIAAAAAABAAAgAJAAIAAAAAABEAAgAJAAIAAAABABEAAgAJAAIAAAACABEAAgAJAAIAAAADABEAAgAJAAIAAAAEABEAAgAJAAIAAAAFABEAAgAJAAIAAAAGABEAAgAJAAIAAAAHABEAAgAJAAIAAAAIABEAAgAJAAIAAAAIABAAAgAJAAIAAAAJABAAAgAJAAIAAAAKABAAAgAJAAIAAAALABAAAgAJAAIAAAAMABAAAgAJAAIAAAANABAAAgAJAAIAAAAOABAAAgAJAAIAAAAPABAAAgAJAAIAAAAQABAAAgAJAAIAAAARABAAAgAJAAIAAAASABAAAgAJAAIAAAATABAAAgAJAAIAAAAUABAAAgAJAAIAAAAVABAAAgAJAAIAAAAWABEAAgAJAAIAAAAXABEAAgAJAAIAAAAYABEAAgAJAAIAAAAVABEAAgAJAAIAAAAUABEAAgAJAAIAAAATABEAAgAJAAIAAAASABEAAgAJAAIAAAARABEAAgAJAAIAAAAQABEAAgAJAAIAAAAPABEAAgAJAAIAAAAOABEAAgAJAAIAAAANABEAAgAJAAIAAAAMABEAAgAJAAIAAAALABEAAgAJAAIAAAAKABEAAgAJAAIAAAAJABEAAgAJAAIAAAAYAAAAAgAJAAIAAAAXAAAAAgAJAAIAAAAWAAAAAgAJAAIAAAAVAAAAAgAJAAIAAAAUAAAAAgAJAAIAAAATAAAAAgAJAAIAAAASAAAAAgAJAAIAAAARAAAAAgAJAAIAAAAQAAAAAgAJAAIAAAAPAAAAAgAJAAIAAAAYABAAAgAJAAIAAAAXABAAAgAJAAIAAAAWABAAAgAJAAIAAAAHABAAAgAJAAIAAAAGABAAAgAJAAIAAAAFABAAAgAJAAIAAAAEABAAAgAJAAIAAAADABAAAgAJAAIAAAACABAAAgAJAAIAAAABABAAAgAJAAIAAAALAAkAAgAFAAMAAAAKAAkAAgACAAMAAAAJAAkAAgACAAMAAAAIAAkAAgACAAMAAAAHAAkAAgACAAMAAAAGAAkAAgACAAMAAAAFAAkAAgACAAMAAAAEAAkAAgABAAMAAAAYAA4AAgAJAAIAAAAXAA4AAgAJAAIAAAAWAA4AAgAJAAIAAAAVAA4AAgAJAAIAAAAUAA4AAgAJAAIAAAATAA4AAgAJAAIAAAASAA4AAgAJAAIAAAARAA4AAgAJAAIAAAAQAA4AAgAJAAIAAAAPAA4AAgAFAAEAAAAOAA4AAgAKAAAAAAANAA4AAgAKAAAAAAAMAA4AAgAKAAAAAAALAA4AAgAKAAAAAAAKAA4AAgAKAAAAAAAJAA4AAgAKAAAAAAAIAA4AAgAKAAAAAAAHAA4AAgAKAAAAAAAGAA4AAgAKAAAAAAAFAA4AAgAKAAAAAAAEAA4AAgAKAAAAAAADAA4AAgAKAAAAAAADAA8AAgAJAAIAAAAEAA8AAgAJAAIAAAAFAA8AAgAJAAIAAAAGAA8AAgAJAAIAAAACAA4AAgAKAAAAAAABAA4AAgAKAAAAAAABAA8AAgAJAAIAAAACAA8AAgAJAAIAAAAHAA8AAgAJAAIAAAAIAA8AAgAJAAIAAAAJAA8AAgAJAAIAAAAKAA8AAgAJAAIAAAALAA8AAgAJAAIAAAAMAA8AAgAJAAIAAAANAA8AAgAJAAIAAAAOAA8AAgAJAAIAAAAPAA8AAgAJAAIAAAAQAA8AAgAJAAIAAAARAA8AAgAJAAIAAAASAA8AAgAJAAIAAAATAA8AAgAJAAIAAAAUAA8AAgAJAAIAAAAVAA8AAgAJAAIAAAAWAA8AAgAJAAIAAAAXAA8AAgAJAAIAAAAYAA8AAgAJAAIAAAAMAAkAAgAJAAMAAAANAAkAAgAJAAMAAAAOAAkAAgAJAAMAAAAPAAEAAgAJAAIAAAAPAAIAAgAJAAIAAAAPAAMAAgAJAAIAAAAPAAQAAgAJAAIAAAAPAAUAAgAJAAIAAAAPAAYAAgAJAAIAAAAPAAcAAgAJAAIAAAAPAAoAAgAIAAEAAAAPAAkAAgAFAAIAAAAPAAgAAgAJAAIAAAAPAAsAAgAIAAEAAAAPAAwAAgAIAAEAAAAPAA0AAgAIAAEAAAAQAA0AAgAJAAIAAAAQAAwAAgAJAAIAAAAQAAsAAgAJAAIAAAAQAAoAAgAJAAIAAAAQAAkAAgAJAAIAAAAQAAgAAgAJAAIAAAAQAAcAAgAJAAIAAAAQAAYAAgAJAAIAAAAQAAUAAgAJAAIAAAAQAAQAAgAJAAIAAAAQAAMAAgAJAAIAAAAQAAIAAgAJAAIAAAAQAAEAAgAJAAIAAAARAAEAAgAJAAIAAAARAAIAAgAJAAIAAAARAAMAAgAJAAIAAAARAAQAAgAJAAIAAAARAAUAAgAJAAIAAAARAAYAAgAJAAIAAAARAAcAAgAJAAIAAAARAAgAAgAJAAIAAAARAAkAAgAJAAIAAAARAAoAAgAJAAIAAAARAAsAAgAJAAIAAAARAAwAAgAJAAIAAAARAA0AAgAJAAIAAAASAA0AAgAJAAIAAAASAAwAAgAJAAIAAAASAAsAAgAJAAIAAAASAAoAAgAJAAIAAAASAAkAAgAJAAIAAAASAAgAAgAJAAIAAAASAAcAAgAJAAIAAAASAAYAAgAJAAIAAAASAAUAAgAJAAIAAAASAAQAAgAJAAIAAAASAAMAAgAJAAIAAAASAAIAAgAJAAIAAAASAAEAAgAJAAIAAAATAAEAAgAJAAIAAAATAAIAAgAJAAIAAAATAAMAAgAJAAIAAAATAAQAAgAJAAIAAAATAAUAAgAJAAIAAAATAAYAAgAJAAIAAAATAAcAAgAJAAIAAAATAAgAAgAJAAIAAAATAAkAAgAJAAIAAAATAAoAAgAJAAIAAAATAAwAAgAJAAIAAAATAA0AAgAJAAIAAAATAAsAAgAJAAIAAAAUAAEAAgAJAAIAAAAVAAEAAgAJAAIAAAAWAAEAAgAJAAIAAAAXAAEAAgAJAAIAAAAYAAEAAgAJAAIAAAAUAAIAAgAJAAIAAAAVAAIAAgAJAAIAAAAWAAIAAgAJAAIAAAAXAAIAAgAJAAIAAAAYAAIAAgAJAAIAAAAYAAMAAgAJAAIAAAAXAAMAAgAJAAIAAAAWAAMAAgAJAAIAAAAVAAMAAgAJAAIAAAAUAAMAAgAJAAIAAAAYAAQAAgAJAAIAAAAXAAQAAgAJAAIAAAAWAAQAAgAJAAIAAAAVAAQAAgAJAAIAAAAUAAQAAgAJAAIAAAAWAAUAAgAJAAIAAAAVAAUAAgAJAAIAAAAUAAUAAgAJAAIAAAAUAAYAAgAJAAIAAAAVAAYAAgAJAAIAAAAWAAYAAgAJAAIAAAAXAAYAAgAJAAIAAAAYAAYAAgAJAAIAAAAXAAUAAgAJAAIAAAAYAAUAAgAJAAIAAAAVAAcAAgAJAAIAAAAUAAcAAgAJAAIAAAAWAAcAAgAJAAIAAAAXAAcAAgAJAAIAAAAYAAcAAgAJAAIAAAAYAAkAAgAJAAIAAAAYAAgAAgAJAAIAAAAXAAgAAgAJAAIAAAAWAAgAAgAJAAIAAAAVAAgAAgAJAAIAAAAUAAgAAgAJAAIAAAAUAAkAAgAJAAIAAAAVAAkAAgAJAAIAAAAWAAkAAgAJAAIAAAAXAAkAAgAJAAIAAAAUAAoAAgAJAAIAAAAVAAoAAgAJAAIAAAAWAAoAAgAJAAIAAAAXAAoAAgAJAAIAAAAYAAoAAgAJAAIAAAAUAAsAAgAJAAIAAAAVAAsAAgAJAAIAAAAWAAsAAgAJAAIAAAAXAAsAAgAJAAIAAAAYAAsAAgAJAAIAAAAUAAwAAgAJAAIAAAAVAAwAAgAJAAIAAAAWAAwAAgAJAAIAAAAXAAwAAgAJAAIAAAAUAA0AAgAJAAIAAAAVAA0AAgAJAAIAAAAWAA0AAgAJAAIAAAAYAA0AAgAJAAIAAAAXAA0AAgAJAAIAAAAYAAwAAgAJAAIAAAD//wAAAgAJAAIAAAD//wEAAgAJAAIAAAD//wIAAgAJAAIAAAD//wMAAgAJAAIAAAD//wQAAgAJAAIAAAD//wUAAgAJAAIAAAD//wYAAgAJAAIAAAD//wcAAgAJAAIAAAD//wgAAgAJAAIAAAD//wkAAgAJAAIAAAD//woAAgAJAAIAAAD//wsAAgAJAAIAAAD//wwAAgAJAAIAAAD//w0AAgAJAAIAAAD//w4AAgAJAAIAAAD//w8AAgAJAAIAAAD//xAAAgAJAAIAAAD//xEAAgAJAAIAAAD+/xEAAgAJAAIAAAD+/xAAAgAJAAIAAAD+/w8AAgAJAAIAAAD+/w4AAgAJAAIAAAD9/w4AAgAJAAIAAAD9/w0AAgAJAAIAAAD9/wwAAgAJAAIAAAD9/wsAAgAJAAIAAAD+/wsAAgAJAAIAAAD+/woAAgAJAAIAAAD+/wwAAgAJAAIAAAD+/w0AAgAJAAIAAAD+/wkAAgAJAAIAAAD+/wgAAgAJAAIAAAD+/wcAAgAJAAIAAAD+/wYAAgAJAAIAAAD+/wUAAgAJAAIAAAD+/wQAAgAJAAIAAAD+/wMAAgAJAAIAAAD+/wIAAgAJAAIAAAD+/wEAAgAJAAIAAAD+/wAAAgAJAAIAAAD9/wAAAgAJAAIAAAD9/wEAAgAJAAIAAAD9/wIAAgAJAAIAAAD9/wMAAgAJAAIAAAD9/wQAAgAJAAIAAAD9/wUAAgAJAAIAAAD9/wYAAgAJAAIAAAD9/wcAAgAJAAIAAAD9/wgAAgAJAAIAAAD9/wkAAgAJAAIAAAD9/woAAgAJAAIAAAD9/w8AAgAJAAIAAAD9/xAAAgAJAAIAAAD9/xEAAgAJAAIAAAD8/xEAAgAJAAIAAAD8/xAAAgAJAAIAAAD8/w8AAgAJAAIAAAD8/w4AAgAJAAIAAAD8/w0AAgAJAAIAAAD8/wwAAgAJAAIAAAD8/woAAgAJAAIAAAD8/wkAAgAJAAIAAAD8/wgAAgAJAAIAAAD8/wcAAgAJAAIAAAD8/wYAAgAJAAIAAAD8/wUAAgAJAAIAAAD8/wQAAgAJAAIAAAD8/wMAAgAJAAIAAAD8/wIAAgAJAAIAAAD8/wEAAgAJAAIAAAD8/wAAAgAJAAIAAAD7/wAAAgAJAAIAAAD6/wAAAgAJAAIAAAD6/wEAAgAJAAIAAAD6/wIAAgAJAAIAAAD6/wMAAgAJAAIAAAD6/wQAAgAJAAIAAAD7/wQAAgAJAAIAAAD7/wUAAgAJAAIAAAD7/wMAAgAJAAIAAAD7/wIAAgAJAAIAAAD7/wEAAgAJAAIAAAD6/wUAAgAJAAIAAAD6/wYAAgAJAAIAAAD6/wcAAgAJAAIAAAD6/wgAAgAJAAIAAAD6/wkAAgAJAAIAAAD6/woAAgAJAAIAAAD6/wsAAgAJAAIAAAD6/wwAAgAJAAIAAAD7/wwAAgAJAAIAAAD7/w0AAgAJAAIAAAD7/w4AAgAJAAIAAAD7/w8AAgAJAAIAAAD6/w8AAgAJAAIAAAD6/xAAAgAJAAIAAAD6/xEAAgAJAAIAAAD7/xEAAgAJAAIAAAD7/xAAAgAJAAIAAAD6/w4AAgAJAAIAAAD6/w0AAgAJAAIAAAD7/wsAAgAJAAIAAAD7/woAAgAJAAIAAAD7/wkAAgAJAAIAAAD7/wgAAgAJAAIAAAD7/wcAAgAJAAIAAAD7/wYAAgAJAAIAAAD8/wsAAgAJAAIAAAD8////AgAJAAIAAAD7////AgAJAAIAAAD6////AgAJAAIAAAD5/xEAAgAJAAIAAAD5/xAAAgAJAAIAAAD5/w8AAgAJAAIAAAD5/w4AAgAJAAIAAAD5/w0AAgAJAAIAAAD5/wwAAgAJAAIAAAD5/wsAAgAJAAIAAAD5/woAAgAJAAIAAAD5/wkAAgAJAAIAAAD5/wgAAgAJAAIAAAD5/wcAAgAJAAIAAAD5/wYAAgAJAAIAAAD5/wUAAgAJAAIAAAD5/wQAAgAJAAIAAAD5/wMAAgAJAAIAAAD5/wIAAgAJAAIAAAD5/wEAAgAJAAIAAAD5/wAAAgAJAAIAAAD5////AgAJAAIAAAD4/xEAAgAJAAIAAAD4/xAAAgAJAAIAAAD4/w8AAgAJAAIAAAD4/w4AAgAJAAIAAAD4/w0AAgAJAAIAAAD4/wwAAgAJAAIAAAD4/wsAAgAJAAIAAAD4/woAAgAJAAIAAAD4/wkAAgAJAAIAAAD4/wgAAgAJAAIAAAD4/wcAAgAJAAIAAAD4/wYAAgAJAAIAAAD4/wUAAgAJAAIAAAD4/wQAAgAJAAIAAAD4/wMAAgAJAAIAAAD4/wIAAgAJAAIAAAD4/wEAAgAJAAIAAAD4/wAAAgAJAAIAAAD4////AgAJAAIAAAAZAAAAAgAJAAIAAAAZAP//AgAJAAIAAAAZAP7/AgAJAAIAAAAZAP3/AgAKAAAAAAAYAP//AgAJAAIAAAAYAP7/AgAJAAIAAAAYAP3/AgAKAAAAAAAXAP//AgAJAAIAAAAXAP7/AgAJAAIAAAAXAP3/AgAKAAAAAAAWAP//AgAJAAIAAAAWAP7/AgAJAAIAAAAWAP3/AgAKAAAAAAAVAP//AgAJAAIAAAAVAP7/AgAJAAIAAAAVAP3/AgAKAAAAAAAUAP//AgAJAAIAAAAUAP7/AgAJAAIAAAAUAP3/AgAKAAAAAAATAP//AgAJAAIAAAATAP7/AgAJAAIAAAATAP3/AgAKAAAAAAASAP//AgAJAAIAAAASAP7/AgAJAAIAAAASAP3/AgAKAAAAAAARAP//AgAJAAIAAAARAP7/AgAJAAIAAAARAP3/AgAKAAAAAAAQAP//AgAJAAIAAAAQAP7/AgAJAAIAAAAQAP3/AgAKAAAAAAAPAP//AgAJAAIAAAAPAP7/AgAJAAIAAAAPAP3/AgAKAAAAAAAOAP//AgAJAAIAAAAOAP7/AgAJAAIAAAAOAP3/AgAKAAAAAAANAP//AgAJAAIAAAANAP7/AgAJAAIAAAANAP3/AgAKAAAAAAAMAP//AgAJAAIAAAAMAP7/AgAJAAIAAAAMAP3/AgAKAAAAAAALAP//AgAJAAIAAAALAP7/AgAJAAIAAAALAP3/AgAKAAAAAAAKAP//AgAJAAIAAAAKAP7/AgAJAAIAAAAKAP3/AgAKAAAAAAAJAP//AgAJAAIAAAAJAP7/AgAJAAIAAAAJAP3/AgAKAAAAAAAIAP//AgAJAAIAAAAIAP7/AgAJAAIAAAAIAP3/AgAKAAAAAAAHAP//AgAJAAIAAAAHAP7/AgAJAAIAAAAHAP3/AgAKAAAAAAAGAP//AgAJAAIAAAAGAP7/AgAJAAIAAAAGAP3/AgAKAAAAAAAFAP//AgAJAAIAAAAFAP7/AgAJAAIAAAAFAP3/AgAKAAAAAAAEAP//AgAJAAIAAAAEAP7/AgAJAAIAAAAEAP3/AgAKAAAAAAADAP//AgAJAAIAAAADAP7/AgAJAAIAAAADAP3/AgAKAAAAAAACAP//AgAJAAIAAAACAP7/AgAJAAIAAAACAP3/AgAKAAAAAAABAP//AgAJAAIAAAABAP7/AgAJAAIAAAABAP3/AgAKAAAAAAAAAP//AgAJAAIAAAAAAP7/AgAJAAIAAAAAAP3/AgAKAAAAAAD/////AgAJAAIAAAD///7/AgAJAAIAAAD///3/AgAKAAAAAAD+////AgAJAAIAAAD+//7/AgAJAAIAAAD+//3/AgAKAAAAAAD9////AgAJAAIAAAD9//7/AgAJAAIAAAD9//3/AgAKAAAAAAD8//7/AgAJAAIAAAD8//3/AgAKAAAAAAD7//7/AgAJAAIAAAD7//3/AgAKAAAAAAD6//7/AgAJAAIAAAD6//3/AgAKAAAAAAD5//7/AgAJAAIAAAD5//3/AgAKAAAAAAD4//7/AgAJAAIAAAD4//3/AgAKAAAAAAAdABEAAgALAAIAAAAdABAAAgALAAIAAAAdAA8AAgALAAIAAAAdAA4AAgALAAIAAAAdAA0AAgALAAIAAAAdAAwAAgALAAIAAAAdAAsAAgALAAIAAAAdAAoAAgALAAIAAAAdAAkAAgALAAIAAAAdAAgAAgALAAIAAAAdAAcAAgALAAIAAAAdAAYAAgALAAIAAAAdAAUAAgALAAIAAAAdAAQAAgALAAIAAAAdAAMAAgALAAIAAAAdAAIAAgALAAIAAAAdAAEAAgALAAIAAAAdAAAAAgALAAIAAAAdAP//AgALAAIAAAAdAP7/AgALAAIAAAAdAP3/AgALAAAAAAAcABEAAgAJAAIAAAAcABAAAgAJAAIAAAAcAA8AAgAJAAIAAAAcAA4AAgAJAAIAAAAcAA0AAgAJAAIAAAAcAAwAAgAJAAIAAAAcAAsAAgAJAAIAAAAcAAoAAgAJAAIAAAAcAAkAAgAJAAIAAAAcAAgAAgAJAAIAAAAcAAcAAgAJAAIAAAAcAAYAAgAJAAIAAAAcAAUAAgAJAAIAAAAcAAQAAgAJAAIAAAAcAAMAAgAJAAIAAAAcAAIAAgAJAAIAAAAcAAEAAgAJAAIAAAAcAAAAAgAJAAIAAAAcAP//AgAJAAIAAAAcAP7/AgAJAAIAAAAcAP3/AgAKAAAAAAAbABEAAgAJAAIAAAAbABAAAgAJAAIAAAAbAA8AAgAJAAIAAAAbAA4AAgAJAAIAAAAbAA0AAgAJAAIAAAAbAAwAAgAJAAIAAAAbAAsAAgAJAAIAAAAbAAoAAgAJAAIAAAAbAAkAAgAJAAIAAAAbAAgAAgAJAAIAAAAbAAcAAgAJAAIAAAAbAAYAAgAJAAIAAAAbAAUAAgAJAAIAAAAbAAQAAgAJAAIAAAAbAAMAAgAJAAIAAAAbAAIAAgAJAAIAAAAbAAEAAgAJAAIAAAAbAAAAAgAJAAIAAAAbAP//AgAJAAIAAAAbAP7/AgAJAAIAAAAbAP3/AgAKAAAAAAAaABEAAgAJAAIAAAAaABAAAgAJAAIAAAAaAA8AAgAJAAIAAAAaAA4AAgAJAAIAAAAaAA0AAgAJAAIAAAAaAAwAAgAJAAIAAAAaAAsAAgAJAAIAAAAaAAoAAgAJAAIAAAAaAAkAAgAJAAIAAAAaAAgAAgAJAAIAAAAaAAcAAgAJAAIAAAAaAAYAAgAJAAIAAAAaAAUAAgAJAAIAAAAaAAQAAgAJAAIAAAAaAAMAAgAJAAIAAAAaAAIAAgAJAAIAAAAaAAEAAgAJAAIAAAAaAAAAAgAJAAIAAAAaAP//AgAJAAIAAAAaAP7/AgAJAAIAAAAaAP3/AgAKAAAAAAAZABEAAgAJAAIAAAAZABAAAgAJAAIAAAAZAA8AAgAJAAIAAAAZAA4AAgAJAAIAAAAZAA0AAgAJAAIAAAAZAAwAAgAJAAIAAAAZAAsAAgAJAAIAAAAZAAoAAgAJAAIAAAAZAAkAAgAJAAIAAAAZAAgAAgAJAAIAAAAZAAcAAgAJAAIAAAAZAAYAAgAJAAIAAAAZAAUAAgAJAAIAAAAZAAQAAgAJAAIAAAAZAAMAAgAJAAIAAAAZAAIAAgAJAAIAAAAZAAEAAgAJAAIAAAAdABMAAgALAAMAAAAdABIAAgALAAIAAAAcABMAAgAJAAMAAAAcABIAAgAJAAIAAAAbABMAAgAJAAMAAAAbABIAAgAJAAIAAAAaABMAAgAJAAMAAAAaABIAAgAJAAIAAAAZABMAAgAJAAMAAAAZABIAAgAJAAIAAAAYABMAAgAJAAMAAAAYABIAAgAJAAIAAAAXABMAAgAJAAMAAAAXABIAAgAJAAIAAAAWABMAAgAJAAMAAAAWABIAAgAJAAIAAAAVABMAAgAJAAMAAAAVABIAAgAJAAIAAAAUABMAAgAJAAMAAAAUABIAAgAJAAIAAAATABMAAgAJAAMAAAATABIAAgAJAAIAAAASABMAAgAJAAMAAAASABIAAgAJAAIAAAARABMAAgAJAAMAAAARABIAAgAJAAIAAAAQABMAAgAJAAMAAAAQABIAAgAJAAIAAAAPABMAAgAJAAMAAAAPABIAAgAJAAIAAAAOABMAAgAJAAMAAAAOABIAAgAJAAIAAAANABMAAgAJAAMAAAANABIAAgAJAAIAAAAMABMAAgAJAAMAAAAMABIAAgAJAAIAAAALABMAAgAJAAMAAAALABIAAgAJAAIAAAAKABMAAgAJAAMAAAAKABIAAgAJAAIAAAAJABMAAgAJAAMAAAAJABIAAgAJAAIAAAAIABMAAgAJAAMAAAAIABIAAgAJAAIAAAAHABMAAgAJAAMAAAAHABIAAgAJAAIAAAAGABMAAgAJAAMAAAAGABIAAgAJAAIAAAAFABMAAgAJAAMAAAAFABIAAgAJAAIAAAAEABMAAgAJAAMAAAAEABIAAgAJAAIAAAADABMAAgAJAAMAAAADABIAAgAJAAIAAAACABMAAgAJAAMAAAACABIAAgAJAAIAAAABABMAAgAJAAMAAAABABIAAgAJAAIAAAAAABMAAgAJAAMAAAAAABIAAgAJAAIAAAD//xMAAgAJAAMAAAD//xIAAgAJAAIAAAD+/xMAAgAJAAMAAAD+/xIAAgAJAAIAAAD9/xMAAgAJAAMAAAD9/xIAAgAJAAIAAAD8/xMAAgAJAAMAAAD8/xIAAgAJAAIAAAD7/xMAAgAJAAMAAAD7/xIAAgAJAAIAAAD6/xMAAgAJAAMAAAD6/xIAAgAJAAIAAAD5/xMAAgAJAAMAAAD5/xIAAgAJAAIAAAD4/xMAAgAJAAMAAAD4/xIAAgAJAAIAAAD3/xMAAgAJAAMAAAD3/xIAAgAJAAIAAAD3/xEAAgAJAAIAAAD3/xAAAgAJAAIAAAD3/w8AAgAJAAIAAAD3/w4AAgAJAAIAAAD3/w0AAgAJAAIAAAD3/wwAAgAJAAIAAAD3/wsAAgAJAAIAAAD3/woAAgAJAAIAAAD3/wkAAgAJAAIAAAD3/wgAAgAJAAIAAAD3/wcAAgAJAAIAAAD3/wYAAgAJAAIAAAD3/wUAAgAJAAIAAAD3/wQAAgAJAAIAAAD3/wMAAgAJAAIAAAD3/wIAAgAJAAIAAAD3/wEAAgAJAAIAAAD3/wAAAgAJAAIAAAD3////AgAJAAIAAAD3//7/AgAJAAIAAAD3//3/AgAKAAAAAAD2/xMAAgAJAAMAAAD2/xIAAgAJAAIAAAD2/xEAAgAJAAIAAAD2/xAAAgAJAAIAAAD2/w8AAgAJAAIAAAD2/w4AAgAJAAIAAAD2/w0AAgAJAAIAAAD2/wwAAgAJAAIAAAD2/wsAAgAJAAIAAAD2/woAAgAJAAIAAAD2/wkAAgAJAAIAAAD2/wgAAgAJAAIAAAD2/wcAAgAJAAIAAAD2/wYAAgAJAAIAAAD2/wUAAgAJAAIAAAD2/wQAAgAJAAIAAAD2/wMAAgAJAAIAAAD2/wIAAgAJAAIAAAD2/wEAAgAJAAIAAAD2/wAAAgAJAAIAAAD2////AgAJAAIAAAD2//7/AgAJAAIAAAD2//3/AgAKAAAAAAD1/xMAAgAJAAMAAAD1/xIAAgAJAAIAAAD1/xEAAgAJAAIAAAD1/xAAAgAJAAIAAAD1/w8AAgAJAAIAAAD1/w4AAgAJAAIAAAD1/w0AAgAJAAIAAAD1/wwAAgAJAAIAAAD1/wsAAgAJAAIAAAD1/woAAgAJAAIAAAD1/wkAAgAJAAIAAAD1/wgAAgAJAAIAAAD1/wcAAgAJAAIAAAD1/wYAAgAJAAIAAAD1/wUAAgAJAAIAAAD1/wQAAgAJAAIAAAD1/wMAAgAJAAIAAAD1/wIAAgAJAAIAAAD1/wEAAgAJAAIAAAD1/wAAAgAJAAIAAAD1////AgAJAAIAAAD1//7/AgAJAAIAAAD1//3/AgAKAAAAAAD0/xMAAgAIAAMAAAD0/xIAAgAIAAEAAAD0/xEAAgAIAAEAAAD0/xAAAgAIAAEAAAD0/w8AAgAIAAEAAAD0/w4AAgAIAAEAAAD0/w0AAgAIAAEAAAD0/wwAAgAIAAEAAAD0/wsAAgAIAAEAAAD0/woAAgAIAAEAAAD0/wkAAgAIAAEAAAD0/wgAAgAIAAEAAAD0/wcAAgAIAAEAAAD0/wYAAgAIAAEAAAD0/wUAAgAIAAEAAAD0/wQAAgAIAAEAAAD0/wMAAgAIAAEAAAD0/wIAAgAIAAEAAAD0/wEAAgAIAAEAAAD0/wAAAgAIAAEAAAD0////AgAIAAEAAAD0//7/AgAIAAEAAAD0//3/AgAIAAAAAAA=")

[node name="Light" parent="." instance=ExtResource("5_4xau6")]
position = Vector2(412, 162)
rotation = -0.785398

[node name="Light2" parent="." instance=ExtResource("5_4xau6")]
position = Vector2(51, 303)
rotation = 0.856957

[node name="recovery" parent="." instance=ExtResource("7_iup6o")]
position = Vector2(257, 324)

[node name="Player" parent="." instance=ExtResource("6_slc34")]
position = Vector2(81, 210)

[node name="Vidrio" parent="." instance=ExtResource("8_ytkhg")]
position = Vector2(366, 243)
rotation = 1.5708

[node name="Door" parent="." instance=ExtResource("9_odxlg")]
position = Vector2(502, 492)

[node name="level_pause" parent="." instance=ExtResource("10_issku")]

[node name="Vidrio2" parent="." instance=ExtResource("8_ytkhg")]
position = Vector2(96, 356)
rotation = 1.5708

[node name="CanvasLayer" type="CanvasLayer" parent="."]
offset = Vector2(600, 50)
transform = Transform2D(1, 0, 0, 1, 600, 50)

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("7_5owdk")]
anchors_preset = -1
anchor_top = 0.000520871
anchor_bottom = 0.000520871
offset_top = -0.337524
offset_bottom = -0.337524
scale = Vector2(1.5, 1.5)
metadata/_edit_use_anchors_ = true

[node name="Enemy2" parent="." instance=ExtResource("13_ses5c")]
position = Vector2(59, 524)

[node name="EffectLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="EffectLayer"]
material = ExtResource("15_c2ybf")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="EffectTimer" type="Timer" parent="."]
process_mode = 3

[node name="FogRect" type="ColorRect" parent="."]
material = ExtResource("16_frtti")
offset_right = 40.0
offset_bottom = 40.0
